--- a/css/sub_5_2style.css
+++ b/css/sub_5_2style.css
@@ -355,11 +355,12 @@ transition: all 0.3s linear;
 /* header_e */
 
 /* banner s */
-#banner{
-    background: url(../images/sub_5_img/sub_5_banner.jpg) no-repeat center top;
+#banner {
+    background: url(../images/sub_5_img/sub_5_banner2.jpg) no-repeat center top;
     height: 1033px;
     overflow: hidden;
 }
+
 .inner_banner{
     width: 1320px;
     margin: 0 auto;
@@ -373,6 +374,15 @@ transition: all 0.3s linear;
     color: #fff;
     font-family: yg-jalnan;
 }
+
+.banner_clova {
+    position: absolute;
+    top: 496px;
+    right: 380px;
+    z-index: 99;
+    animation: ani 1s infinite alternate;
+}
+
 /* banner e */
 /* save  */
 
