--- a/css/sub_5_2style.css
+++ b/css/sub_5_2style.css
@@ -487,7 +487,8 @@ transition: all 0.3s linear;
 .swiper_position{
     width: 308px;
     height: 412px;
-    background: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(59, 90, 80, 0.74));
+    background: linear-gradient(transparent, rgba(59, 90, 80, 0.74));
+    background: -webkit-linear-gradient(rgba(255, 255, 255, 0), rgba(59, 90, 80, 0.74));
     position: absolute;
     top: -1px;
     left: 0;
@@ -502,7 +503,8 @@ transition: all 0.3s linear;
 .swiper_position:hover{
     opacity: 1;
     transition: all 0.3s linear;
-    background: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.904));
+  background: linear-gradient(transparent, white);
+    background: -webkit-linear-gradient(rgba(255, 255, 255, 0), white)
 }
 .swiper_position:hover .swiper_txt{
     color: #343434;
