--- a/css/sub_2style.css
+++ b/css/sub_2style.css
@@ -93,6 +93,11 @@ a{
     text-decoration: none;
     color: inherit;
 }
+
+*{
+    cursor: url(../images/cursor3.png) 4 5, url(../images/cursor3.png), url(../images/cursor3.png) 5 5, auto;
+}
+
 /* html{
     font-size:;
 } */
