--- a/css/sub_5_1style.css
+++ b/css/sub_5_1style.css
@@ -192,6 +192,9 @@ a {
     color: inherit;
 }
 
+*{
+    cursor: url(../images/cursor3.png) 4 5, url(../images/cursor3.png), url(../images/cursor3.png) 5 5, auto;
+}
 /* html{
     font-size:;
 } */
@@ -475,6 +478,7 @@ body {
     background: url(../images/sub_5_img/sub_5_banner2.jpg) no-repeat center top;
     height: 1033px;
     overflow: hidden;
+    position: relative;
 }
 
 .inner_banner {
@@ -503,11 +507,21 @@ body {
 /* banner e */
 /* save  */
 
+
+#blank2{
+    position: absolute;
+    top: 950px;
+    left: 0;
+    z-index: 99;
+}
+
+
 /* btn_section */
 #btn_section {
     width: 1320px;
     overflow: hidden;
     margin: 0 auto;
+    position: relative;
 }
 
 .btn_wrap {
